--- a/docs/transaction-api.asciidoc
+++ b/docs/transaction-api.asciidoc
@@ -268,4 +268,4 @@ Non-HTTP transactions will begin with an outcome of `unknown`.
 
 * `outcome` +{type-string}+
 
-The `setOutcome` method allows an end user to override the Node.js agent's default setting of a transaction's `outcome` property.  The `setOutcome` method accepts a string of either `success`, `failure`, or `unknown`, and will force the agent to report this value for a specific's span.
+The `setOutcome` method allows an end user to override the Node.js agent's default setting of a transaction's `outcome` property.  The `setOutcome` method accepts a string of either `success`, `failure`, or `unknown`, and will force the agent to report this value for a specific span.
