--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,16 +28,24 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
-[[release-notes-3.12.0]]
-==== 3.12.0 - 2020/22/21
+[[release-notes-3.12.1]]
+==== 3.12.1 - 2020/02/25
 
+[float]
+===== Bug fixes
+
+* fix: Update https://github.com/elastic/apm-nodejs-http-client/blob/master/CHANGELOG.md#v951[apm-server client]
+  to fix a {issues}1749[possible crash] when polling for central config.
+
+
+[[release-notes-3.12.0]]
+==== 3.12.0 - 2020/02/21
 
 [float]
 ===== Features
 
-* feat: set span outcome to success or failure depending on whether an error
-  was captured during when the span was active.
-  https://github.com/elastic/apm-agent-nodejs/issues/1814
+* feat: Set span outcome to success or failure depending on whether an error
+  was captured during when the span was active. {issues}1814[#1814]
 
 * feat: Adds public `setOutcome` method to span and transaction APIs, and
   adds a top level `setTransactionOutcome` and `setSpanOutcome` to set
