--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,6 +28,22 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+* Remove the accidental `nodejs.eventloop.delay.ns` metric that was always
+  reporting a zero value. The existing `nodejs.eventloop.delay.avg.ms` is
+  the intended metric. {pull}1993[#1993]
+
+
 [[release-notes-3.12.1]]
 ==== 3.12.1 - 2021/02/25
 
