--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -934,18 +934,19 @@ During startup the Node.js agent queries the local environment to determine whet
 
 If the value is not one of the five listed above, the agent will use the value of `auto`.
 
-[[ignore_message_queues]]
+[[ignore-message-queues]]
 ==== `ignoreMessageQueues`
 * *Type:* Array
 * *Default:* `[]`
 * *Env:* `ELASTIC_IGNORE_MESSAGE_QUEUES`
+* <<dynamic-configuration, image:./images/dynamic-config.svg[] >> *Central config name:* `ignore_message_queues`
 
 Array or comma-separated string of wildcard patterns that tell the agent to
 ignore certain queues/topics when instrumenting messaging systems.
 
 When an instrumented messaging system sends or receives a message, the agent
 will test the queue/topic name against each wildcard in this list. If
-the name matches the agent will skip instrumenting the operation.
+the name matches, the agent will skip instrumenting the operation.
 
 The `ignoreMessageQueues` property supports simple wildcard (`*`) patterns, and
 may not include commas.  Wildcard matches are case-insensitive by default. You
@@ -959,7 +960,7 @@ require('elastic-apm-node').start({
   ignoreMessageQueues: [
     'overnight_jobs',
     'events_*',
-    '(?-i)/caseSensitiveSearch'
+    '(?-i)caseSensitiveSearch'
   ]
 })
 ----
