--- a/docs/message-queues.asciidoc
+++ b/docs/message-queues.asciidoc
@@ -1,9 +1,11 @@
 [[message-quques]]
 == Message Queues
 
-The Node.js will automatically create spans for any activity to/from your Amazon SQS message queues.  In order to have those spans recorded, your message queue activity must  occur during a transaction.
+The Node.js Agent will automatically create spans for any activity to/from your Amazon SQS message queues.  In order to have those spans recorded, your message queue activity must  occur during a transaction.
 
-If you're performing queue operations during an HTTP request from an instrumented module, the agent will start a transaction automatically.  However, if you're performing queue operations in a stand alone program (such as a message processor) you'll need to use the Node.js Agent's `startTransaction` method to create transactions for your messages.
+If you're performing queue operations during an HTTP request from a <<compatibility-frameworks,supported framework>>     the agent will start a transaction automatically.  However, if you're performing queue operations in a stand alone program (such as a message processor) you'll need to use the Node.js Agent's <<apm-start-transaction,`startTransaction()`>> method to create transactions for your messages.
+
+You can see an example of this in the following code sample.
 
 [source,js]
 ----
@@ -30,7 +32,7 @@ sqs.receiveMessage(params, function(err, data) {
 })
 ----
 
-In the above code you can see we've started a transaction before calling the `sqs.receiveMessage` method,and ended it _after_ the queue's processing callback has finished executing.  The will ensure a transaction is active while processing your queue messages.
+In the above code you can see we've started a transaction before calling the `sqs.receiveMessage` method, and ended it _after_ the queue's processing callback finishes executing.  The will ensure a transaction is active while processing your queue messages.
 
 [float]
 [[message-queues-distributed-tracing]]
@@ -38,16 +40,24 @@ In the above code you can see we've started a transaction before calling the `sq
 
 Similarly, if you want to connect your queue scheduling and queue processing via distributed tracing, you'll need to use the Node.js Agent's API to _store_ a `traceparent` header with your queue message and then provide that `traceparent` header when starting the new transaction.
 
-Here's an example of that uses the Node.js Agent API to store the `traceparent` as a message attribute and then uses that attribute to link your new transaction with the original.
+Here's an example that uses the Node.js Agent API to store the `traceparent` as a message attribute and then uses that attribute to link your new transaction with the original.
 
+First, when sending the message, we add the trace as one of the `MessageAttributes`
 [source,js]
 ----
 // stores the traceparent when sending the queue message
+const traceParent = apm.currentTransaction ? apm.currentTransaction.traceparent : ''
+
+// Use the Amazon SQS `MessageAttributes` to pass 
+// on the  traceparent header
 const params = {
   /* ... other params ... */
   MessageAttributes: {
     /* ... other attributes ... */
-    "MyTraceparent":apm.currentTransaction && apm.currentTransaction.traceparent
+    "MyTraceparent":{
+        DataType: "String",
+        StringValue: traceParent
+    }
   }
 
 }
@@ -56,21 +66,33 @@ sqs.sendMessage(params, function(err, data) {
 });
 ----
 
+Then, when receiving the messages, we start and end our transaction while looping over the messages.  
+
 [source,js]
 ----
 // uses the traceparent to start a transaction
+
 sqs.receiveMessage(params, function(err, data) {
-  /* ... */
+  if(!data.Messages) {
+    return
+  }
+  
+  // loop over your returned messages
   for(const message of data.Messages) {
-    const transaction = apm.startTransaction('Process Message', 'cli', {
-      childOf:message.MessageAttributes.MyTraceparent
+    // start a transaction to process each message, using our previously
+    // saved distributed tracing traceparent header
+    let traceparent
+    if(message.MessageAttributes.MyTraceparent) {
+        traceparent = message.MessageAttributes.MyTraceparent.StringValue
+    }
+    const transactionMessage = apm.startTransaction('RECEIVE_TRANSACTION', 'cli', {
+      childOf:traceparent
     })
     /* ... process message ... */
-    transaction.end()
+    transactionMessage.end()
   }
 })
+
 ----
 
-Unlike the first code sample, this approach will create a single transaction for each processed queue message.  This allows you to link each individual message with the transaction it started in.
-
-The `startTransaction` API allows _you_ to control how your queue data is reported to Elastic APM.
+Unlike the first code sample, this approach will create a single transaction for each processed queue message.  This allows you to link each individual message with the transaction it started in. The <<apm-start-transaction,`startTransaction()`>> API allows _you_ to control how your queue data is reported to Elastic APM.
