--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -447,7 +447,7 @@ be automatically applied to a custom <<logger,`logger`>>.
 * *Env:* `ELASTIC_APM_LOGGER=false` to _ignore_ a custom logger
 
 By default, the APM agent logs to stdout in
-https://www.elastic.co/guide/en/ecs-logging/overview/current/intro.html[ecs-logging]
+{ecs-logging-ref}/intro.html[ecs-logging]
 format. Use the `logger` config to pass in a custom logger object. The custom
 logger must provide `trace`, `debug`, `info`, `warn`, `error`, and `fatal`
 methods that take a string message argument.
