--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -38,7 +38,7 @@ Notes:
 
 * The APM agent's own internal logging now uses structured JSON logging using
   the https://getpino.io/#/docs/api?id=logger[pino API], and formatted in
-  https://www.elastic.co/guide/en/ecs-logging/overview/current/intro.html[ecs-logging]
+  {ecs-logging-ref}/intro.html[ecs-logging]
   format. The log records on stdout are now single-line JSON objects. For example:
 +
 [source,bash]
