--- a/docs/lambda.asciidoc
+++ b/docs/lambda.asciidoc
@@ -20,7 +20,7 @@ check out the <<api,API Reference>>.
 Setting up your Lambda function is a two step process. First, you’ll
 need to install https://github.com/elastic/apm-aws-lambda/[the Elastic
 APM Lambda extension] into your Lambda environment. Elastic uses a
-Lambda extension to forward data on to APM Server in a way that does not
+Lambda extension to forward data to APM Server in a way that does not
 interfere with the execution of your Lambda function. You can
 https://github.com/elastic/apm-aws-lambda/blob/main/apm-lambda-extension/docs/aws-lambda-extension.asciidoc[read
 more about installing and using this extension here].
