--- a/docs/lambda.asciidoc
+++ b/docs/lambda.asciidoc
@@ -7,7 +7,9 @@ NOTE: For the best reading experience,
 please view this documentation at https://www.elastic.co/guide/en/apm/agent/nodejs/current/lambda.html[elastic.co]
 endif::[]
 
-=== Get started with Lambda (Beta)
+=== Get started with Lambda
+
+experimental::[]
 
 Getting Elastic APM set up for your lambda functions is easy,
 and there are various ways you can tweak it to fit your needs.
