--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,7 +40,18 @@ Notes:
 [float]
 ===== Bug fixes
 
-* Fixes for 'redis' instrumentations:
+* Fixes for 'ioredis' instrumentation ({pull}2460[#2460]):
++
+**  Fix run-context so that a span created in the same tick as an ioredis
+    client command will no longer be a child of the redis span.
+**  Capture an APM error and correctly set span.outcome to "failure" when
+    a redis client command calls back with an error.
+**  Avoid a rare possible double-instrumentation of redis commands
+    internally-queued before the RedisClient is "ready". ({issues}2459[#2459])
+**  Add destination context so Redis shows up on the Service Map.
+
+
+* Fixes for 'redis' instrumentation:
 +
 **  Fix run-context so that a span created in the same tick as a redis client
     command will no longer be a child of the redis span. ({issues}2430[#2430])
